# pyrag

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  test.json
examples/: assistant.py  bc_cities.py  hf.py  sherlock.py
notebook/: app.ipynb  app.py  ipynb-converter.py
pyrag/: __init__.py
pyrag/chat/: __init__.py  chain.py  chat.py  db_message_history.py  knowledge.py  knowledge_source.py  manager.py  message_history.py  model.py  session.py  typing.py
pyrag/db/: __init__.py  connection.py  database.py  typing.py
pyrag/embeddings/: __init__.py  base.py  create.py  creator.py  embeddings.py  huggingface.py  model.py  openai.py  typing.py
pyrag/files/: file.py  manager.py
pyrag/files/source/: base.py  s3.py  url.py
pyrag/helpers/: text.py
pyrag/search/: __init__.py  base.py  creator.py  model.py  search.py  semantic.py  typing.py  vector.py
tests/: test_pyrag.py
