[metadata]
name = PyRAG
version = 0.0.1
author = SingleStore
author_email = support@singlestore.com
description = A library that makes it easy to get started with RAG applications with SingleStore.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/singlestore/marketing/knowledge-graph-rag
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True