[metadata]
name = PyRAG
version = 0.0.3
author = SingleStore
author_email = support@singlestore.com
description = A library that makes it easy to get started with RAG applications with SingleStore.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/pyrag
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
install_requires =
    singlestoredb>=1.0.2, <2.0.0
    langchain>=0.1.13, <0.2.0
    langchain-openai>=0.1.1, <0.2.0
    langchain-text-splitters>=0.0.1, <0.1.0
    huggingface-hub>=0.22.0, <0.23.0
    pandas>=2.1.4, <3.0.0
    boto3>=1.34.70, <2.0.0
    PyPDF2>=3.0.1, <4.0.0
    tiktoken>=0.6.0, <1.0.0
python_requires = >=3.7
include_package_data = True